--- a/vpc_creation.yaml
+++ b/vpc_creation.yaml
@@ -23,6 +23,8 @@ Outputs:
   VpcId:
     Value: !Ref TestVPC
     Description: ID of the created VPC
+    Export:
+      Name: !Sub "${AWS::StackName}-VpcId"
   VpcCidrBlock:
     Value: !GetAtt TestVPC.CidrBlock
     Description: CIDR block of the created VPC
